[package]
name = "vite_migration"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
ast-grep-config = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true }
brush-parser = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
vite_error = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
