[package]
name = "vite_shared"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
directories = { workspace = true }
nix = { workspace = true, features = ["poll", "term"] }
owo-colors = { workspace = true }
serde = { workspace = true }
# use `preserve_order` feature to preserve the order of the fields in `package.json`
serde_json = { workspace = true, features = ["preserve_order"] }
supports-color = "3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }
which = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { workspace = true, features = ["native-tls-vendored", "stream", "json", "system-proxy"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-no-provider", "stream", "json", "system-proxy"] }
rustls = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[lints]
workspace = true
