[package]
name = "vite_static_config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
vite_path = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
